--- a/src/App.css
+++ b/src/App.css
@@ -1,46 +1,49 @@
-.App {
-  text-align: center;
+.background {
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+#quote-box {
+  width: 500px;
+  margin: 0 auto;
+  min-height: 300px;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  justify-content: space-between; 
+  padding: 2rem;
+  text-align: left;
+  background-color: white;
+  color: #444;
+  border-radius: 3px;
+}
+
+.quote-content {
+  height: 220px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  margin: 10px;
+}
+
+#author {
+  text-align: right;
+}
+
+button, a {
+  border-radius: 3px;
+  border: 1px solid transparent;
+  padding: 0.6rem 1.3rem;
+  width: fit-content;
+  font-weight: 500;
+  font-family: inherit;
+  background: #444;
+}
+
+#new-quote {
   color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-.Channel-link {
-  color: #CD201F;
-}
-
-.welcomeHeadline {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  float: right;
 }
